2006-09-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.2-5

	* data/radarImage.rda: add 'radarImage' data set from MMY-book
	* man/radarImage.Rd: ditto

	* data/toxicity.rda: added 'toxicity' data set (from MMY)
	* man/toxicity.Rd:   ditto

	* src/rf-common.f (rfishsort): swap integer declaration order

2006-09-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/covPlot.Rd: document covPlot() as well, since that is more
	generally usable.

	* src/rf-common.f (rfrangen): declare unifrnd() as double prec.;
	also in other places;  now using 'implicit none' to catch such
	things more easily.

	* R/tolEllipse.R (tolEllipsePlot): classic=TRUE: do not prepare
	a side-by-side plot, since we *over*plot.
	Rename 2nd argument from 'mcd' to 'm.cov', since it really only
	needs to have a mean ('center') and covariance component.

2006-09-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.2-3 uploaded to CRAN

	* tests/tlts.R: rename test functions and move to new file
	* inst/test_LTS.R:
	* tests/tmcd.R: rename test functions and move to new file;
	   do not 'time' them, since we want to use *.Rout.save files.
	* inst/test_MCD.R:

	* src/Makevars: add long overdue $(FLIBS)

2006-09-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/ltsReg.R (ltsReg.default): add argument name: sort(*, partial = )
	* R/covMcd.R (covMcd): ditto

2006-06-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Depends): no longer depend on "MASS" which is suggested.

	* NAMESPACE, man/summarizeRobWeights.Rd: export and document
		summarizeRobWeights().

	* R/lmrob.R (summarizeRobWeights): improvement (singular/plural etc)

	* R/ltsReg.R (ltsReg.formula): add 'subset' etc; and follow
		guidelines in developer.r-project.org/model-fitting-functions.txt.

	* tests/tmcd.R: typo; add timing comparison

	* R/glmrob.R (glmrob): family = "gaussian" now dispatches to lmrob()
