@@ -1,6 +1,6 @@
 Package: robustbase
-Version: 0.2-5
-Date: 2006-09-29
+Version: 0.2-6
+Date: 2006-09-30
 Title: Basic Robust Statistics
 Author: Original code by many authors, notably
 	Peter Rousseeuw, Christophe Croux, see file 'Copyrights';
